[project]
name = "poker"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "wangjinyao", email = "wangjinyao1992@google.com" }]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "poker:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/poker"]
